// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectCard /> as a link matches with snapshot 1`] = `
<a
  className="sc-bczRLJ cA-DGz k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
  href="//hello.world"
>
  <div
    className="k-ProjectCard__image"
  >
    <img
      alt="image alt"
      className="k-ProjectCard__image__image"
      src="kitten.jpg"
    />
  </div>
  <div
    className="k-ProjectCard__content"
  >
    <h1
      className="sc-gsnTZi cCXGim k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      The Office, la série culte décortiquée par S!CK
    </h1>
    <div
      className="k-ProjectCard__line"
    >
      <span>
        par 
        <strong>
          Bidules
        </strong>
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        134
      </span>
      <span>
        contributeurs
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        7 jours
      </span>
      <span>
        restants
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        9 930 €
      </span>
      <span>
        sur 12 000 €
      </span>
    </div>
    <div
      className="k-ProjectCard__progress"
    >
      <div
        aria-label="Progrès de la campagne"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-dkzDqf gYindF k-Meters-Progress"
        role="progressbar"
        style={
          Object {
            "--progress-color": "var(--color-primary-500, #19b4fa)",
            "--progress-value": "0%",
          }
        }
      >
        <div
          className="k-Meters-Progress__ramp"
        />
      </div>
      <span
        className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
      >
        55
         %
      </span>
    </div>
  </div>
</a>
`;

exports[`<ProjectCard /> by default matches with snapshot 1`] = `
<div
  className="sc-bczRLJ cA-DGz k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
>
  <div
    className="k-ProjectCard__image"
  >
    <img
      alt="image alt"
      className="k-ProjectCard__image__image"
      src="kitten.jpg"
    />
  </div>
  <div
    className="k-ProjectCard__content"
  >
    <div
      className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
    >
      Prolongation
    </div>
    <h1
      className="sc-gsnTZi cCXGim k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      The Office, la série culte décortiquée par S!CK
    </h1>
    <div
      className="k-ProjectCard__line"
    >
      <span>
        par 
        <strong>
          Bidules
        </strong>
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        134
      </span>
      <span>
        contributeurs
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        7 jours
      </span>
      <span>
        restants
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        9 930 €
      </span>
      <span>
        sur 12 000 €
      </span>
    </div>
    <div
      className="k-ProjectCard__progress"
    >
      <div
        aria-label="Progrès de la campagne"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-dkzDqf gYindF k-Meters-Progress"
        role="progressbar"
        style={
          Object {
            "--progress-color": "var(--color-primary-500, #19b4fa)",
            "--progress-value": "0%",
          }
        }
      >
        <div
          className="k-Meters-Progress__ramp"
        />
      </div>
      <span
        className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
      >
        55
         %
      </span>
    </div>
  </div>
</div>
`;

exports[`<ProjectCard /> lendopoils matches with snapshot 1`] = `
<div
  className="sc-bczRLJ cA-DGz k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
>
  <div
    className="k-ProjectCard__image"
  >
    <img
      alt="image alt"
      className="k-ProjectCard__image__image"
      src="kitten.jpg"
    />
  </div>
  <div
    className="k-ProjectCard__topLine k-ProjectCard__topLine--center"
  >
    <span>
      TopLine content
    </span>
  </div>
  <div
    className="k-ProjectCard__content"
  >
    <div
      className="k-ProjectCard__avatar"
    >
      <img
        alt=""
        src="kitten.jpg"
      />
    </div>
    <h1
      className="sc-gsnTZi cCXGim k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      The Office, la série culte décortiquée par S!CK
    </h1>
    <div
      className="k-ProjectCard__line"
    >
      <span>
        par 
        <strong>
          Bidules
        </strong>
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        134
      </span>
      <span>
        contributeurs
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        7 jours
      </span>
      <span>
        restants
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        9 930 €
      </span>
      <span>
        sur 12 000 €
      </span>
    </div>
    <div
      className="k-ProjectCard__progress"
    >
      <div
        aria-label="Progrès de la campagne"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={55}
        className="sc-dkzDqf gYindF k-Meters-Progress"
        role="progressbar"
        style={
          Object {
            "--progress-color": "var(--color-primary-500, #19b4fa)",
            "--progress-value": "55%",
          }
        }
      >
        <div
          className="k-Meters-Progress__ramp"
        />
      </div>
      <span
        className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
      >
        55
         %
      </span>
    </div>
  </div>
</div>
`;
